--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Loader Icon Series - Part 1</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
